# Dreamer1

./: .gitattributes  .gitignore  CleanPlugins.bat  ComprehensiveImGuiFix.bat  DeepClean.bat  DiagnoseUBTIssue.bat  DiagnoseUBTIssue.ps1  DirectUBTFix.bat  Dreamer.uplugin  Dreamer1.uproject  FixBuildDuplicationErrors.bat  FixBuildDuplicationErrors.ps1  FixImGui.bat  FixPluginDependencies.bat  FixUBTDependencies.bat  FixUBTDependencies.ps1  FixUnrealBuildTool.bat  FixUnrealBuildTool.ps1  FixWorldContext.bat  ManualRebuild.bat  README.md  REBUILD_GUIDE.md  RebuildModules.bat  RebuildModules.ps1  RebuildModules_Fixed.ps1  RebuildModules_Simple.bat  RebuildPlugin.bat  RunRebuild.bat  RunUBTVerbose.bat  RunUBTVerbose.ps1  SimpleImGuiFix.bat  TODO.md
.github/workflows/: unreal-build.yml
Config/: DefaultEngine.ini  DefaultGame.ini
Documentation/: BuildSystemIntegration.md  DevelopmentLog.md  GettingStarted.md
Plugins/Dreamer_Rebuilt/HostProject/: HostProject.uproject
Plugins/InEditorCpp/: InEditorCpp.uplugin  scope.md
Plugins/InEditorCpp/Testing/Standalone/: CMakeLists.txt  StandaloneEditor.vcxproj
Plugins/InEditorCpp/Testing/Standalone/include/: editor_window.h  language_service.h
Plugins/InEditorCpp/Testing/Standalone/src/: editor_window.cpp  main.cpp
Resources/: BuildIcon_40x.txt  ButtonIcon_40x.txt  CancelBuildIcon_40x.txt  ErrorListIcon_40x.txt
Source/: Dreamer1.Target.cs  Dreamer1Editor.Target.cs
Source/Dreamer/: Dreamer.Build.cs
Source/Dreamer1/: Dreamer1.Build.cs  Dreamer1.cpp  Dreamer1GameModeBase.cpp  Dreamer1GameModeBase.h
(+32 files in other folders)
